# neuron7x-btc-market-intelligence-fractal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKSUMS.SHA256  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  constraints.txt  docker-compose.yml  go.mod  input_schema.json  mkdocs.yml  output_schema.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  lint.yml  release.yml  security.yml  test.yml
api/: app.py
btcmi/: __init__.py  api.py  cli.py  config.py  data.py  engine_nf3p.py  engine_v1.py  engine_v2.py  enums.py  feature_processing.py  io.py  logging_cfg.py  logging_util.py  metrics.py  nf3p_engine.py  runner.py  runner_registry.py  schema_util.py  utils.py
btcmi/adapters/: __init__.py
btcmi/api/: __init__.py  app.py
btcmi/core/: __init__.py  registry.py
btcmi/engines/: __init__.py  base.py  nf3p.py  v1.py  v2.py
btcmi/examples/: ohlcv.csv  ohlcv.json  real_intraday.json  real_swing.json  run_e2e.py  swing_fractal.json
cli/: btcmi.py
docker/: Dockerfile
docs/: ADAPTERS.md  API.md  Architecture.md  FieldOrder.md  LOGGING.md  PLUGINS.md  QUICKSTART.md  SECURITY.md  SNAPSHOTS.md  api_load_baseline.json  openapi.json
docs/schemas/: input_schema.md  output_schema.md
examples/: intraday.json  intraday_fractal.json  ohlcv.csv  ohlcv.json  run_e2e.py  swing_fractal.json
ops/grafana/: dashboard.json
provenance/: sbom.spdx.json
scripts/: generate_openapi.py  generate_sbom.py  generate_schema_docs.py  release_check.sh  verify_checksums.py
tests/: conftest.py  test_api_app.py  test_api_snapshots.py  test_bool_features.py  test_cli_file_not_found.py  test_cli_nf3p.py  test_cli_output_write_error.py  test_cli_required_fields.py  test_cli_stdin.py  test_data.py  test_drift_guard.py  test_engine_v1_layers.py  test_engine_v1_properties.py  test_engine_v2_layers.py  test_golden_checksums.py  test_golden_v1.py  test_golden_v2.py  test_logging_cfg.py  test_nf3p_engine.py  test_normalize_no_bool.py  test_properties.py  test_router_regime.py  test_runner_nf3p.py  test_schema_freeze.py  test_schema_util.py  test_snapshot_v1.py  test_snapshot_v2.py  test_utils.py  test_validate_output_script.py  test_validate_scenario_window.py  test_vol_regime_pctl.py  test_write_output_error.py  validate_output.py
(+21 files in other folders)
