[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "btcmi"
version = "1.2.1"
description = "BTC Market Intelligence with Fractal Engine v2."
readme = "docs/QUICKSTART.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.22.0",
    "fastapi>=0.111.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.27.0",
]
authors = [{name="BTCMI Team"}]
license = {text="MIT"}
[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "ruff>=0.6.4",
]
[project.scripts]
btcmi = "cli.btcmi:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
