[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "btcmi"
description = "BTC Market Intelligence with Fractal Engine v2."
readme = "docs/QUICKSTART.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.22.0",
    "fastapi>=0.111.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.27.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.14.1",
    "ccxt>=4.2.23",
    "pycoingecko>=3.1.0",
    "docker>=7.1.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "uvicorn>=0.30.1",
]
authors = [{name="BTCMI Team"}]
license = {text="MIT"}
dynamic = ["version"]
[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
]
[project.scripts]
btcmi = "cli.btcmi:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.data-files]
"" = ["VERSION"]

[tool.setuptools.package-data]
btcmi = ["py.typed"]
"" = ["examples/*.csv", "examples/*.json"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
